--- a/src/MauiTemplatesCLI/MauiAppFS/MauiApp.1.fsproj
+++ b/src/MauiTemplatesCLI/MauiAppFS/MauiApp.1.fsproj
@@ -317,7 +317,11 @@
         <PackageReference Include="Microsoft.Maui.Controls.Foldable" Version="$(MauiVersion)" />
         <!--#endif-->
         <!--#if (AddToolkit)-->
+        <!--#if (Net9)-->
+        <PackageReference Include="CommunityToolkit.Maui" Version="10.*" />
+        <!--#else-->
         <PackageReference Include="CommunityToolkit.Maui" Version="9.*" />
+        <!--#endif-->
         <!--#endif-->
         <!--#if (AddSyncfusionToolkit)-->
         <PackageReference Include="Syncfusion.Maui.Toolkit" Version="1.*" />
