--- a/src/MauiTemplatesCLI/MauiAppCS/MauiApp.1.MauiLib/MauiApp.1.MauiLib.csproj
+++ b/src/MauiTemplatesCLI/MauiAppCS/MauiApp.1.MauiLib/MauiApp.1.MauiLib.csproj
@@ -85,7 +85,7 @@
         <!--#if (AddMaps)-->
         <PackageReference Include="Microsoft.Maui.Controls.Maps" Version="$(MauiVersion)" />
         <!--#if (AllPlatforms || IsWindows)-->
-        <!--#if (Net9)-->
+        <!--#if (Net9OrLater)-->
         <PackageReference Include="CommunityToolkit.Maui.Maps" Version="3.*" />
         <!--#else-->
         <PackageReference Include="CommunityToolkit.Maui.Maps" Version="2.*" />
@@ -95,7 +95,9 @@
         <!--#if (Hybrid || Razor)-->
         <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="$(MauiVersion)" />
         <!--#endif-->
-        <!--#if (Net9)-->
+        <!--#if (Net10)-->
+        <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="10.*-*" Condition="'$(Configuration)' == 'Debug'" />
+        <!--#elif (Net9)-->
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.*" Condition="'$(Configuration)' == 'Debug'" />
         <!--#else-->
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.*" Condition="'$(Configuration)' == 'Debug'" />
@@ -105,8 +107,8 @@
         <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
         <!--#endif-->
         <!--#if (AddToolkit)-->
-        <!--#if (Net9)-->
-        <PackageReference Include="CommunityToolkit.Maui" Version="10.*" />
+        <!--#if (Net9OrLater)-->
+        <PackageReference Include="CommunityToolkit.Maui" Version="11.*" />
         <!--#else-->
         <PackageReference Include="CommunityToolkit.Maui" Version="9.*" />
         <!--#endif-->
@@ -115,28 +117,28 @@
         <PackageReference Include="Syncfusion.Maui.Toolkit" Version="1.*" />
         <!--#endif-->
         <!--#if (AddMarkup)-->
-        <!--#if (Net9)-->
+        <!--#if (Net9OrLater)-->
         <PackageReference Include="CommunityToolkit.Maui.Markup" Version="5.*" />
         <!--#else-->
         <PackageReference Include="CommunityToolkit.Maui.Markup" Version="4.*" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (AddCamera)-->
-        <!--#if (Net9)-->
+        <!--#if (Net9OrLater)-->
         <PackageReference Include="CommunityToolkit.Maui.Camera" Version="2.*" />
         <!--#else-->
         <PackageReference Include="CommunityToolkit.Maui.Camera" Version="1.*" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (AddMedia)-->
-        <!--#if (Net9)-->
-        <PackageReference Include="CommunityToolkit.Maui.MediaElement" Version="5.*" />
+        <!--#if (Net9OrLater)-->
+        <PackageReference Include="CommunityToolkit.Maui.MediaElement" Version="6.*" />
         <!--#else-->
         <PackageReference Include="CommunityToolkit.Maui.MediaElement" Version="4.*" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (AddSharedToolkit)-->
-        <!--#if (Net9)-->
+        <!--#if (Net9OrLater)-->
         <PackageReference Include="VijayAnand.Toolkit.Markup" Version="4.*" />
         <!--#else-->
         <PackageReference Include="VijayAnand.Toolkit.Markup" Version="3.*" />
@@ -150,10 +152,10 @@
         <!--#endif-->
         <!--#if (Reactor)-->
         <!--#if (Net9OrLater)-->
-        <PackageReference Include="Reactor.Maui" Version="3.*-*" />
-        <PackageReference Include="Reactor.Maui.Canvas" Version="3.*-*" />
+        <PackageReference Include="Reactor.Maui" Version="3.*" />
+        <PackageReference Include="Reactor.Maui.Canvas" Version="3.*" />
         <!--#if (AddMaps)-->
-        <PackageReference Include="Reactor.Maui.Maps" Version="3.*-*" />
+        <PackageReference Include="Reactor.Maui.Maps" Version="3.*" />
         <!--#endif-->
         <!--#else-->
         <PackageReference Include="Reactor.Maui" Version="2.*" />
