--- a/src/MauiTemplatesCLI/MauiAppCS/MauiApp.1.RazorLib/MauiApp.1.RazorLib.csproj
+++ b/src/MauiTemplatesCLI/MauiAppCS/MauiApp.1.RazorLib/MauiApp.1.RazorLib.csproj
@@ -18,7 +18,9 @@
         <!--#if (CentralPkgMgmt)-->
         <PackageReference Include="Microsoft.AspNetCore.Components.Web" />
         <!--#else-->
-        <!--#if (Net9)-->
+        <!--#if (Net10)-->
+        <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="10.*-*" />
+        <!--#elif (Net9)-->
         <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="9.*" />
         <!--#else-->
         <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.*" />
