--- a/src/MauiTemplatesCLI/MauiAppFS/MauiApp.1.fsproj
+++ b/src/MauiTemplatesCLI/MauiAppFS/MauiApp.1.fsproj
@@ -99,7 +99,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <RootNamespace>MauiApp._1</RootNamespace>
         <!--#if ((AllPlatforms || IsWindows) && AddMvvmToolkit)-->
-        <WindowsSdkPackageVersion>10.0.19041.38</WindowsSdkPackageVersion>
+        <!--<WindowsSdkPackageVersion>10.0.19041.38</WindowsSdkPackageVersion>-->
         <!--#endif-->
         <DisableImplicitFSharpCoreReference>true</DisableImplicitFSharpCoreReference>
 
@@ -119,7 +119,7 @@
 
         <TargetPlatformIdentifier Condition=" $(TargetPlatformIdentifier) == '' ">$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)'))</TargetPlatformIdentifier>
         <!--#if (AllPlatforms || IsiOS)-->
-        <!--#if (Net9)-->
+        <!--#if (Net9OrLater)-->
         <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">15.0</SupportedOSPlatformVersion>
         <!--#elif (Hybrid)-->
         <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">14.2</SupportedOSPlatformVersion>
@@ -128,7 +128,7 @@
         <!--#endif-->
         <!--#endif-->
         <!--#if (AllPlatforms || IsmacOS)-->
-        <!--#if (Net9)-->
+        <!--#if (Net9OrLater)-->
         <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">15.0</SupportedOSPlatformVersion>
         <!--#elif (Hybrid)-->
         <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">14.0</SupportedOSPlatformVersion>
@@ -253,7 +253,7 @@
         <!--#else-->
         <PackageReference Include="Fabulous" Version="2.4.*" />
         <PackageReference Include="Fabulous.MauiControls" Version="8.*" />
-        <!--#if (Net9)-->
+        <!--#if (Net9OrLater)-->
         <PackageReference Include="FSharp.Core" Version="9.*" />
         <!--#else-->
         <PackageReference Include="FSharp.Core" Version="8.*" />
@@ -301,7 +301,9 @@
         <PackageReference Include="VijayAnand.Toolkit.Markup" />
         <!--#endif-->
         <!--#else-->
-        <!--#if (Net9)-->
+        <!--#if (Net10)-->
+        <PackageReference Include="Microsoft.Extensions.Logging.Debug" Condition="'$(Configuration)' == 'Debug'" Version="10.*-*" />
+        <!--#elif (Net9)-->
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Condition="'$(Configuration)' == 'Debug'" Version="9.*" />
         <!--#else-->
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Condition="'$(Configuration)' == 'Debug'" Version="8.*" />
@@ -317,8 +319,8 @@
         <PackageReference Include="Microsoft.Maui.Controls.Foldable" Version="$(MauiVersion)" />
         <!--#endif-->
         <!--#if (AddToolkit)-->
-        <!--#if (Net9)-->
-        <PackageReference Include="CommunityToolkit.Maui" Version="10.*" />
+        <!--#if (Net9OrLater)-->
+        <PackageReference Include="CommunityToolkit.Maui" Version="11.*" />
         <!--#else-->
         <PackageReference Include="CommunityToolkit.Maui" Version="9.*" />
         <!--#endif-->
@@ -327,14 +329,14 @@
         <PackageReference Include="Syncfusion.Maui.Toolkit" Version="1.*" />
         <!--#endif-->
         <!--#if (AddMarkup)-->
-        <!--#if (Net9)-->
+        <!--#if (Net9OrLater)-->
         <PackageReference Include="CommunityToolkit.Maui.Markup" Version="5.*" />
         <!--#else-->
         <PackageReference Include="CommunityToolkit.Maui.Markup" Version="4.*" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (AddSharedToolkit)-->
-        <!--#if (Net9)-->
+        <!--#if (Net9OrLater)-->
         <PackageReference Include="VijayAnand.Toolkit.Markup" Version="4.*" />
         <!--#else-->
         <PackageReference Include="VijayAnand.Toolkit.Markup" Version="3.*" />
