--- a/src/MauiTemplatesCLI/MauiAppCS/Platforms/Android/AndroidManifest.xml
+++ b/src/MauiTemplatesCLI/MauiAppCS/Platforms/Android/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-    <!--#if (Net9)-->
+    <!--#if (Net9OrLater)-->
     <!--#if (Hybrid)-->
     <uses-sdk android:minSdkVersion="24" android:targetSdkVersion="35" />
     <!--#else-->
