--- a/src/MauiTemplatesCLI/MauiAppFS/Platforms/Android/AndroidManifest.xml
+++ b/src/MauiTemplatesCLI/MauiAppFS/Platforms/Android/AndroidManifest.xml
@@ -1,16 +1,22 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-    <!--#if (Net9OrLater)-->
+    <!--#if (Net10OrLater)-->
     <!--#if (Hybrid)-->
-    <uses-sdk android:minSdkVersion="24" android:targetSdkVersion="35" />
+    <uses-sdk android:minSdkVersion="24" android:targetSdkVersion="36" />
     <!--#else-->
-    <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="35" />
+    <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="36" />
     <!--#endif-->
-    <!--#else-->
+    <!--#elif (Net8)-->
     <!--#if (Hybrid)-->
     <uses-sdk android:minSdkVersion="24" android:targetSdkVersion="34" />
     <!--#else-->
     <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="34" />
+    <!--#endif-->
+    <!--#else-->
+    <!--#if (Hybrid)-->
+    <uses-sdk android:minSdkVersion="24" android:targetSdkVersion="35" />
+    <!--#else-->
+    <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="35" />
     <!--#endif-->
     <!--#endif-->
 	<application android:allowBackup="true" android:icon="@mipmap/appicon" android:roundIcon="@mipmap/appicon_round" android:supportsRtl="true"></application>
