Templates updated to support .NET MAUI 10 Preview 4 and .NET MAUI 9 SR7 #304

--- a/src/MauiTemplatesCLI/MauiAppCS/MauiApp.1.csproj
+++ b/src/MauiTemplatesCLI/MauiAppCS/MauiApp.1.csproj
@@ -107,6 +107,9 @@
         <!--#if ((AllPlatforms || IsWindows) && AddMvvmToolkit)-->
         <!--<WindowsSdkPackageVersion>10.0.19041.38</WindowsSdkPackageVersion>-->
         <!--#endif-->
+        <!--#if (Net10)-->
+        <RoslynCompilerType>FrameworkPackage</RoslynCompilerType>
+        <!--#endif-->
 
         <!-- Display name -->
         <ApplicationTitle>SAFE-NAME</ApplicationTitle>
@@ -310,7 +313,7 @@
         <!--#endif-->
         <!--#if (AddMarkup)-->
         <!--#if (Net9OrLater)-->
-        <PackageReference Include="CommunityToolkit.Maui.Markup" Version="5.*" />
+        <PackageReference Include="CommunityToolkit.Maui.Markup" Version="6.*" />
         <!--#else-->
         <PackageReference Include="CommunityToolkit.Maui.Markup" Version="4.*" />
         <!--#endif-->
