--- a/src/MauiTemplatesCLI/SharedClassLib/SharedClassLib.1.csproj
+++ b/src/MauiTemplatesCLI/SharedClassLib/SharedClassLib.1.csproj
@@ -8,6 +8,9 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <RootNamespace>SharedClassLib._1</RootNamespace>
         <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
+        <!--#if (Net10)-->
+        <RoslynCompilerType>FrameworkPackage</RoslynCompilerType>
+        <!--#endif-->
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(TargetFramework)' == 'FORMS_TFM'">
@@ -120,7 +123,7 @@
         <!--#endif-->
         <!--#if (AddMauiMarkup)-->
         <!--#if (Net9OrLater)-->
-        <PackageReference Include="CommunityToolkit.Maui.Markup" Version="5.*" />
+        <PackageReference Include="CommunityToolkit.Maui.Markup" Version="6.*" />
         <!--#else-->
         <PackageReference Include="CommunityToolkit.Maui.Markup" Version="4.*" />
         <!--#endif-->
