--- a/src/MauiTemplatesCLI/MauiAppCS/MauiApp.1.MauiLib/MauiApp.1.MauiLib.csproj
+++ b/src/MauiTemplatesCLI/MauiAppCS/MauiApp.1.MauiLib/MauiApp.1.MauiLib.csproj
@@ -9,6 +9,7 @@
 
         <!-- .NET MAUI -->
         <UseMaui>true</UseMaui>
+        <SingleProject>true</SingleProject>
         <!--#if (Hybrid)-->
         <EnableDefaultCssItems>false</EnableDefaultCssItems>
         <!--#endif-->
@@ -18,6 +19,9 @@
         <LangVersion>latest</LangVersion>
         <ImplicitUsings>enable</ImplicitUsings>
         <RootNamespace>MauiApp._1</RootNamespace>
+        <!--#if (Net10)-->
+        <RoslynCompilerType>FrameworkPackage</RoslynCompilerType>
+        <!--#endif-->
     </PropertyGroup>
 
     <!--#if (PackageRef)-->
@@ -118,7 +122,7 @@
         <!--#endif-->
         <!--#if (AddMarkup)-->
         <!--#if (Net9OrLater)-->
-        <PackageReference Include="CommunityToolkit.Maui.Markup" Version="5.*" />
+        <PackageReference Include="CommunityToolkit.Maui.Markup" Version="6.*" />
         <!--#else-->
         <PackageReference Include="CommunityToolkit.Maui.Markup" Version="4.*" />
         <!--#endif-->
